# octoproxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: host_rewrite.toml  host_rewrite.txt  host_rule.toml
assets/example-certs/: ca.crt  ca.key
assets/example-certs/client/: client.crt  client.key
assets/example-certs/server/: server.crt  server.key
bench/: bench_hey.sh  client.toml  parse_hey_report.py  requirements.txt  run_bench_report.sh
client/: Cargo.toml  config.toml
client/assets/: host_rewrite.txt  host_rule.toml
client/assets/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
client/assets/testconfig/: host_rewrite_client.toml  host_rule_client.toml  simple_client.toml
client/src/: backends.rs  balance.rs  config.rs  connector.rs  lib.rs  main.rs  metric.rs  proxy.rs
doc/: how-to-simulate-a-high-ping-linux-env.md
e2e/: Cargo.toml
easycert/: Cargo.toml
easycert/src/: gen.rs  lib.rs  main.rs  show.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  metric.rs  proxy.rs  tls.rs
lib/src/proxy_client/: mod.rs  stream.rs  tunnel.rs
octoproxy/: Cargo.toml
octoproxy/src/: main.rs
script/: .gitignore  bench_hey.sh  bench_wrk.sh  client.toml  example_proxy_wrk.lua  genca.sh  get_host.lua  parse_hey_report.py  proxy_wrk.lua
server/: Cargo.toml  config.toml
server/src/: config.rs  lib.rs  main.rs  proxy.rs
tui/: Cargo.toml
tui/src/: app.rs  fetch.rs  lib.rs  main.rs  spinner.rs
