[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "testclient"
path = "src/bin/client.rs"

[[bin]]
name = "testserver"
path = "src/bin/server.rs"


[dependencies]
tokio = { workspace = true }
warp = { version = "0.3.4", features = ["tls"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }

http = { workspace = true }

hyper = { workspace = true, default-features = false, features = [
    "tcp",
    "client",
    "http1",
] }

octoproxy-lib = { path = "../lib" }
