[package]
name = "e2e"
edition = "2021"
description = "octoproxy's e2e bins"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

publish = false

[[bin]]
name = "testclient"
path = "src/bin/client.rs"

[[bin]]
name = "testserver"
path = "src/bin/server.rs"


[dependencies]
tokio = { workspace = true }
warp = { version = "0.3.4", features = ["tls"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }

http = { workspace = true }

hyper = { workspace = true, default-features = false, features = [
    "tcp",
    "client",
    "http1",
] }

octoproxy-lib = { path = "../lib" }
