[package]
name = "octoproxy-easycert"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
time = { version = "0.3.6", default-features = false }
