[package]
name = "octoproxy-easycert"
description = "EasyCert library for octoproxy"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
time = { version = "0.3.6", default-features = false }
pem = "2.0.1"
x509-parser = "0.15.0"
console = "0.15.7"
