[package]
name = "octoproxy-lib"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
futures = { version = "0.3.28", features = ["std"] }
rustls-pemfile = "1.0.2"
webpki-roots = "0.23.0"

tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = "0.1.12"
httparse = "1.8.0"
quinn = { workspace = true }

mimalloc = { version = "*", default-features = false, optional = true }
futures-util = "0.3.28"
hyper = { version = "0.14.26", default-features = false, features = [
    "tcp",
    "client",
    "http1",
] }

[features]
default = []
alloc = ["mimalloc"]
