[package]
name = "octoproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

octoproxy-client = { path = "../client" }
octoproxy-server = { path = "../server" }
octoproxy-easycert = { path = "../easycert" }
octoproxy-tui = { path = "../tui" }
