[package]
name = "octoproxy"
description = "A load balancing proxy with mTLS encryption for QUIC and HTTP/2"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

octoproxy-client = { path = "../client" }
octoproxy-server = { path = "../server" }
octoproxy-easycert = { path = "../easycert" }
octoproxy-tui = { path = "../tui" }
