[package]
name = "octoproxy"
description = "A load balancing proxy with mTLS encryption for QUIC and HTTP/2"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }

octoproxy-client = { path = "../client", version = "0.1.0" }
octoproxy-server = { path = "../server", version = "0.1.0" }
octoproxy-easycert = { path = "../easycert", version = "0.1.0" }
octoproxy-tui = { path = "../tui", version = "0.1.0" }
